--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+body {
+  background-color: #353535;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+p a {color: white}
+
+.App-logo {
+  margin-top: 15vh;
+  height: 60vh;
 }
 
 .App-title {
@@ -22,7 +21,3 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
