--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
