--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
 html,
 body,
 footer {
-  background: #282425;
+  background: #06bce7;
 }
 
-p a {color: #707580}
+p a {color: #0d1122}
 
 .App-logo {
   margin: 15vh 0 0vh 0;
